tests/toy/neg/000253_mutation.toylang
program a = { bool if a then sleep; } .
